// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection list Container component matches snapshot 1`] = `
<section
  className="collections"
>
  <h2>
    List of coin collections
  </h2>
  <hr />
  <ul
    className="list"
  >
    <li
      className="collection-item"
    >
      <a
        href="/collection/1/calico-kings-and-queens-of-spain"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Calico Kings and Queens of Spain
      </a>
    </li>
    <li
      className="collection-item"
    >
      <a
        href="/collection/2/calico-kings-and-queens-of-spain"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Calico Kings and Queens of Spain
      </a>
    </li>
    <li
      className="collection-item"
    >
      <a
        href="/collection/3/calico-kings-and-queens-of-spain"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Calico Kings and Queens of Spain
      </a>
    </li>
  </ul>
</section>
`;

exports[`Collection list Item component matches snapshot 1`] = `
<li
  className="collection-item"
>
  <a
    href="/collection/1/calico-kings-and-queens-of-spain"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    Calico Kings and Queens of Spain
  </a>
</li>
`;
